<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjectTesting</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_clubs">ClubsActivity</string>
    <string name="title_activity_sunypoly">SUNY Poly</string>
    <string name="title_activity_web">Websites</string>
    <string name="title_activity_contact">Contacts</string>
    <string name="title_activity_cnse">CNSE</string>
    <string name="title_activity_cnsecontact">CNSE Contacts</string>
    <string name="title_activity_teachers">TeachersActivity</string>
    <string name="title_activity_saveme">SAVEMEActivity</string>
    <string name="title_activity_department_staff">DepartmentStaffActivity</string>
    <string name="title_activity_test_page">Please Work</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_club">ClubActivity</string>
    <string name="title_activity_sunyit_fragment">Suny IT</string>
    <string name="title_activity_home_fragment">Home</string>
    <string name="title_activity_cnsefragment">CNSE</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_prof">ProfActivity</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_acontact">Albany Contacts</string>
    <string name="ABlackBoard">BlackBoard</string>
    <string name="AContacts">Contacts</string>
    <string name="AClubs">Clubs</string>
    <string name="AEllucian">Ellucian</string>
    <string name="AIntranet">Intranet</string>
    <string name="ALaundry">Laudry</string>
    <string name="ASchoolStore">School Store</string>
    <string name="angel">Angel</string>
    <string name="banner">Banner</string>
    <string name="canned">Canceled Classes</string>
    <string name="clubs">Clubs</string>
    <string name="title_activity_media">Utica Social Media</string>
    <string name="title_activity_amedia">Albany Social Media</string>

</resources>
